# tessera

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  front-end design.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cargo/: config.toml
PRD/: PRD.md
TDD/: TDD.md
agent/: .env.example  .gitignore  .npmrc  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
agent/scripts/: find-deploy-block.mjs
agent/src/: config.ts  index.ts  logger.ts  metrics.ts  types.ts  vault-client.ts  vibekit-shim.ts
agent/src/db/: index.ts  schema.ts
agent/src/http/: auth.ts  server.ts
agent/src/http/routes/: actions.ts  alerts.ts  config.ts  health.ts  metrics.ts
agent/src/llm/: alert-copy.ts  client.ts  nl-config.ts
agent/src/log/: action.ts  alerts.ts  jsonl.ts
agent/src/strategy/: alerter.ts  auto-repay.ts  health-classifier.ts  liquidator.ts  tick.ts
agent/test/: alerter.test.ts  auto-repay.test.ts  db.test.ts  health-classifier.test.ts  http.test.ts  jsonl.test.ts  liquidator.test.ts  nl-config.test.ts  safety-score.test.ts  tick.test.ts
contracts/crates/interest-model/: Cargo.toml  README.md
contracts/crates/interest-model/src/: health.rs  index.rs  lib.rs  liquidate.rs  rate.rs  utilization.rs
contracts/crates/interest-model/tests/: properties.proptest-regressions  properties.rs
contracts/crates/vault/: Cargo.toml
contracts/crates/vault/src/: errors.rs  events.rs  interest.rs  lib.rs  oracle.rs  storage.rs  tests.rs  token.rs
contracts/solidity/: foundry.toml
contracts/solidity/script/: Deploy.s.sol
contracts/solidity/src/: MockOracle.sol  MockStock.sol  MockUSDC.sol
contracts/solidity/test/: MockOracle.t.sol  MockStock.t.sol  MockUSDC.t.sol
scripts/: deploy-testnet.ps1  e2e-loop.ps1  keeper.ps1  state.ps1
scripts/runbook/: README.md  demo-setup.ts  price.ts  vault-pause.ts  vault-unpause.ts
shared/abis/: TesseraVault.json
shared/addresses/: local.json  testnet.json
web/: .env.example  .env.local.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/app/: globals.css  landing.css  layout.tsx  page.tsx  providers.tsx
web/app/admin/: page.tsx
web/app/agent/: page.tsx
web/app/api/agent/config/: route.ts
web/app/borrow/: page.tsx
web/app/dashboard/: page.tsx
web/app/deposit/: page.tsx
web/app/lend/: page.tsx
web/app/status/: page.tsx
web/app/transparency/: page.tsx
web/components/: action-log.tsx  admin-panel.tsx  agent-config-panel.tsx  agent-controls.tsx  borrow-form.tsx  chain-banner.tsx  connect-button.tsx  dashboard-client.tsx  deposit-form.tsx  health-badge.tsx  health-meter.tsx  lend-form.tsx  mark.tsx  paused-banner.tsx  position-tile.tsx  safety-score.tsx  shell.tsx  status-client.tsx  transparency-client.tsx  value-card.tsx
web/components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx
web/lib/: addresses.ts  agent.ts  chain.ts  contracts.ts  csv.ts  env.ts  format.ts  health.ts  protocol.ts  utils.ts  wagmi.ts
web/test/: format.test.ts  health-badge.test.tsx  health.test.ts  safety-score.test.tsx
