[package]
name = "interest-model"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust, no_std math primitives for the Tessera lending protocol (utilization, rate curve, health factor, borrow index, liquidation)."
repository = "https://github.com/tessera-protocol/tessera"

# PHASE 2: Once the workspace root Cargo.toml is created by Agent A and exposes
# `alloy-primitives` under `[workspace.dependencies]`, switch this to
# `alloy-primitives = { workspace = true, default-features = false }` to keep
# versions aligned with the Stylus vault crate.
[dependencies]
alloy-primitives = { version = "1.0", default-features = false }

[dev-dependencies]
# `proptest` pulls std; that is fine because dev-dependencies are only used by
# test/bench targets which always link std.
proptest = "1.5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# These pedantic lints are noisy for math-heavy code and have been reviewed.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
