[package]
name = "tessera-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tessera lending vault — Stylus/Rust contract with ERC-4626 lender surface, multi-asset stock collateral, interest accrual, health-factor-gated borrowing, and partial liquidation."

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]

[dependencies]
stylus-sdk = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
interest-model = { path = "../interest-model" }

[dev-dependencies]
# `stylus-test` exposes the in-process `TestVM` host used by `src/tests.rs`.
# It is dev-only — it never reaches the WASM build artefact.
#
# NOTE on host-build prerequisites: `stylus-test` transitively pulls
# `alloy-provider` → `reqwest` (default features) → `rustls` with the
# `aws-lc-sys` backend, which requires `cl.exe` to build on Windows. The
# Tessera dev environment (xwin + rust-lld) does not ship `cl.exe`. The
# `interest-model` crate avoids this because it depends only on
# `alloy-primitives`; the vault has no equivalent escape hatch because the
# `TestVM` host genuinely depends on the full `alloy` runtime. To unblock
# host tests on a fresh dev box install the MSVC Build Tools "C++ build
# tools" workload (or any environment with `cl.exe` on PATH).
stylus-sdk = { version = "0.10", default-features = false, features = ["stylus-test", "mini-alloc"] }
alloy-primitives = { version = "1", default-features = false }
alloy-sol-types = { version = "1", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
